Work for #1585 - Text overflowing and maxLength issue in designer v2

--- a/packages/survey-creator-core/src/components/string-editor.scss
+++ b/packages/survey-creator-core/src/components/string-editor.scss
@@ -6,6 +6,7 @@
     display: inline-block;
     position: relative;
     outline: none;
+    word-break: break-word;
     z-index: 2;
     &[aria-placeholder]:empty:before {
       content: attr(aria-placeholder);
