--- a/packages/survey-creator-core/src/survey-designer-theme/blocks/sd-question.scss
+++ b/packages/survey-creator-core/src/survey-designer-theme/blocks/sd-question.scss
@@ -26,7 +26,6 @@
   .sv-string-editor {
     max-width: 100%;
     white-space: normal;
-    word-break: break-word;
   }
 
   .sv-title-actions__title {
